adding new notifications to email for join appeal confirmation and revoke access emails